--- a/hw2/hw2_draft.ipynb
+++ b/hw2/hw2_draft.ipynb
@@ -945,6 +945,15 @@
     "print(\"RMSE: {}\".format(rmse_2A))\n",
     "print(predict_result_2A[:20])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg1 = sm.OLS(endog=data['lpmeal'], exog=sm.tools.add_constant(data[[\"p_bla\", \"lwage\", \"lhouse\", .... ]]))"
+   ]
   }
  ],
  "metadata": {
