--- a/hw3_linearModelsClassification/hw3.ipynb
+++ b/hw3_linearModelsClassification/hw3.ipynb
@@ -123,7 +123,7 @@
     "            indexes = np.where(self.Y_train == c)\n",
     "            x_in_class = self.X_train[indexes]\n",
     "\n",
-    "            self.amodel[c]=dict()\n",
+    "            self.amodel[c] = dict()\n",
     "            self.amodel[c][\"mu\"] = np.mean(x_in_class, axis=0)\n",
     "            self.amodel[c][\"cov\"] = np.cov(x_in_class, rowvar=False)\n",
     "            \n",
@@ -801,6 +801,109 @@
     "\n",
     "print(\"\\nSummary statistics for X_test:\")\n",
     "print(X_test.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q2.2 (20%) Derive the gradient and hession matrix for the new E(w).**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\nabla E(w) = \\Lambda w + \\Phi ^ T (y-t)$, where y = $\\sigma(w^T \\phi_n)$   \n",
+    "$\\nabla \\nabla E(w) = \\Lambda + \\Phi^T R \\Phi$, where R is a diagonal N x N matrix, with $R_(nn) = y_n(1-y_n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q2.3 (30%) Create your own mylogistic_l2 class. Show the learned w as well as test accuracy for the cases below. If w is too long for you, show selected w for continuous-valued, binary-valued, and the constant term.**   \n",
+    "* Case 1: lambda = 1 for all coefficients   \n",
+    "* Case 2: lambda = 1 for all but the intercept, no regularization for incercept term.   \n",
+    "* Case 3: lambda = 1 for numerical-valued features, lambda = 0.5 for binary-valued features, no regularization for incercept term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "class mylogistic_l2():\n",
+    "    \n",
+    "    def __init__(self, reg_vec:list, max_iter:int, tol, add_intercept:bool):\n",
+    "        \n",
+    "        self.reg_vec = np.array(reg_vec)\n",
+    "        self.reg_matrix = np.diag(self.reg_vec)\n",
+    "        self.max_iter = max_iter\n",
+    "        self.tol = tol\n",
+    "        self.add_intercept = add_intercept\n",
+    "        self.X_train = None\n",
+    "        sefl.Y_train = None\n",
+    "        \n",
+    "    def fit(self, x, y):\n",
+    "        self.X_train = x\n",
+    "        self.Y_train = y.reshape((len(y), 1)) # t is a N x 1 matrix\n",
+    "        \n",
+    "        if self.add_intercept is True:\n",
+    "            const = np.zeros((len(self.X_train), 1)) + 1\n",
+    "            self.X_train = np.append(self.X_train, const, axis=1) # X_train is now a N x (N+1) matrix\n",
+    "        \n",
+    "        self.train()\n",
+    "    \n",
+    "    def train(self):\n",
+    "        \n",
+    "        def sigmoid(x):\n",
+    "            return(1 / (1+math.exp(-x)) )\n",
+    "            \n",
+    "        def get_gradient_hessian(w):\n",
+    "            \"\"\"compute the gradient and hessian of the error function with corresponding vector w\"\"\"\n",
+    "            \n",
+    "            w = w.reshape((len(w), 1)) # w -> N x 1 matrix\n",
+    "            pred = np.matmul(self.X_train, w) # (N x N)(N x 1)\n",
+    "            pred_sigmoid = np.apply_along_axis(func1d=sigmoid, arr=pred, 1).reshape((len(pred),1))\n",
+    "            \n",
+    "            # compute gradient\n",
+    "            reg_gradient = np.matmul(self.reg_matrix, w) # (N x N)(N x 1)\n",
+    "            err_gradient = np.matmul(np.transpose(self.X_train), pred_sigmoid - self.Y_train) # (N x N)(N x 1)\n",
+    "            gradient = reg_gradient + err_gradient #  a (N x 1) matrix\n",
+    "            \n",
+    "            # compute hessian\n",
+    "            R = np.diag(pred_sigmoid*(1-pred_sigmoid))\n",
+    "            err_hessian = np.matmul(np.matmul(np.transpose(self.X_train), R), self.X_train)\n",
+    "            hessian = self.reg_matrix + err_hessian\n",
+    "            \n",
+    "            return((gradient, hessian))\n",
+    "        \n",
+    "        def get_W0():\n",
+    "            \"\"\"use the closed-form solution of ridge regression\"\"\"\n",
+    "            \n",
+    "            b = self.reg_vec.mean()\n",
+    "            bI = np.diag(b * np.array([1 for i in range(len(self.reg_vec))]))\n",
+    "            \n",
+    "            #(X^T x X + bI)\n",
+    "            pre = np.matmul(np.transpose(self.X_train), self.X_train) + bI\n",
+    "            \n",
+    "            try:\n",
+    "                pre_inv = np.linalg.inv(pre)\n",
+    "            except numpy.linalg.LinAlgError:\n",
+    "                raise ValueError(\"Invertible Error while generating W0.\")\n",
+    "            \n",
+    "            W0 = np.matmul(np.matmul(pre_inv, np.transpose(self.X_train)), self.Y_train)\n",
+    "            return(W0)\n",
+    "        \n",
+    "        def error_function(w):\n",
+    "            \"\"\"return the error value with corresponding w\"\"\"\n",
+    "            \n",
+    "        "
    ]
   }
  ],
