--- a/hw3_linearModelsClassification/hw3.ipynb
+++ b/hw3_linearModelsClassification/hw3.ipynb
@@ -850,12 +850,12 @@
     "        sefl.Y_train = None\n",
     "        \n",
     "    def fit(self, x, y):\n",
-    "        self.X_train = x\n",
+    "        self.X_train = x # a N x M matrix\n",
     "        self.Y_train = y.reshape((len(y), 1)) # t is a N x 1 matrix\n",
     "        \n",
     "        if self.add_intercept is True:\n",
     "            const = np.zeros((len(self.X_train), 1)) + 1\n",
-    "            self.X_train = np.append(self.X_train, const, axis=1) # X_train is now a N x (N+1) matrix\n",
+    "            self.X_train = np.append(self.X_train, const, axis=1)\n",
     "        \n",
     "        self.train()\n",
     "    \n",
@@ -867,14 +867,14 @@
     "        def get_gradient_hessian(w):\n",
     "            \"\"\"compute the gradient and hessian of the error function with corresponding vector w\"\"\"\n",
     "            \n",
-    "            w = w.reshape((len(w), 1)) # w -> N x 1 matrix\n",
-    "            pred = np.matmul(self.X_train, w) # (N x N)(N x 1)\n",
+    "            w = w.reshape((len(w), 1)) # w -> M x 1 matrix\n",
+    "            pred = np.matmul(self.X_train, w) # (N x M)(M x 1)\n",
     "            pred_sigmoid = np.apply_along_axis(func1d=sigmoid, arr=pred, 1).reshape((len(pred),1))\n",
     "            \n",
     "            # compute gradient\n",
-    "            reg_gradient = np.matmul(self.reg_matrix, w) # (N x N)(N x 1)\n",
-    "            err_gradient = np.matmul(np.transpose(self.X_train), pred_sigmoid - self.Y_train) # (N x N)(N x 1)\n",
-    "            gradient = reg_gradient + err_gradient #  a (N x 1) matrix\n",
+    "            reg_gradient = np.matmul(self.reg_matrix, w) # (M x M)(M x 1)\n",
+    "            err_gradient = np.matmul(np.transpose(self.X_train), pred_sigmoid - self.Y_train) # (M x N)(N x 1)\n",
+    "            gradient = reg_gradient + err_gradient #  a (M x 1) matrix\n",
     "            \n",
     "            # compute hessian\n",
     "            R = np.diag(pred_sigmoid*(1-pred_sigmoid))\n",
