--- a/hw3_linearModelsClassification/hw3.ipynb
+++ b/hw3_linearModelsClassification/hw3.ipynb
@@ -553,13 +553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "\n",
       "Summary statistics for X_train:\n",
       "                age        fnlwgt  education-num  capital-gain  capital-loss  \\\n",
@@ -810,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +917,7 @@
     "            error_new = error_function(w_new)\n",
     "            \n",
     "            if (error_new >= error_old):\n",
-    "                print(\"Best w found after {}th iteration\".format(i+1))\n",
+    "                print(\"Best w found after {}th iteration\".format(i))\n",
     "                break\n",
     "            \n",
     "            w_old = w_new\n",
@@ -948,6 +949,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>   \n",
+    "* Case 1: lambda = 1 for all coefficients  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -970,14 +979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8481567585519761\n"
+      "Accuracy for case 1: 0.8481567585519761\n"
      ]
     }
    ],
@@ -990,9 +999,157 @@
     "    if predictions_1[i] == observations[i]:\n",
     "        correct_num += 1\n",
     "\n",
-    "print(\"Accuracy: {}\".format(correct_num/len(Y_test)))\n",
-    "    "
+    "print(\"Accuracy for case 1: {}\".format(correct_num/len(Y_test)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>   \n",
+    "* Case 2: lambda = 1 for all but the intercept, no regularization for incercept term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best w found after 8th iteration\n",
+      "Finish training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = X_train.shape[1]\n",
+    "lambda_vec = [1 for i in range(M+1)]\n",
+    "lambda_vec[-1] = 0\n",
+    "logic2 = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "logic2.fit(np.array(X_train), np.array(Y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for case 2: 0.8478910660909996\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_2 = logic2.predict(np.array(X_test))\n",
+    "correct_num = 0\n",
+    "\n",
+    "observations = np.array(Y_test)\n",
+    "for i in range(len(Y_test)):\n",
+    "    if predictions_2[i] == observations[i]:\n",
+    "        correct_num += 1\n",
+    "\n",
+    "print(\"Accuracy for case 2: {}\".format(correct_num/len(Y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>   \n",
+    "* Case 2:  lambda = 1 for numerical-valued features, lambda = 0.5 for binary-valued features, no regularization for incercept term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best w found after 8th iteration\n",
+      "Finish training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = X_train.shape[1]\n",
+    "lambda_vec = [1 for i in range(M+1)]\n",
+    "index = len(continuos_col_name)\n",
+    "for i in range(index, len(lambda_vec)):\n",
+    "    lambda_vec[i] = 0.5\n",
+    "\n",
+    "lambda_vec[-1] = 0\n",
+    "\n",
+    "logic3 = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "logic3.fit(np.array(X_train), np.array(Y_train)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for case 3: 0.8477582198605115\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_3 = logic3.predict(np.array(X_test))\n",
+    "correct_num = 0\n",
+    "\n",
+    "observations = np.array(Y_test)\n",
+    "for i in range(len(Y_test)):\n",
+    "    if predictions_3[i] == observations[i]:\n",
+    "        correct_num += 1\n",
+    "\n",
+    "print(\"Accuracy for case 3: {}\\n\".format(correct_num/len(Y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2.4 (10%) Further split the training data into subtraining (90%) and tuning (10%) to search for the best hyper-parameters. Set the regularization coefficient for the constant term to zero. Allow different regularizations for continuous-valued and binary-valued features. Let  a1  and  a2  denote the regularization coefficients for continuous-valued and binary-valued features. Search the best  a1  and  a2  and report the test accuracy using the best hyper-parameters. You should follow the following procedure to search for the best hyper-parameters.\n",
+    "\n",
+    "Choose a set of grids among a reasonable range. For example, 10 grids in [0.01, 100].\n",
+    "Conduct grid search with the constraint that  a1=a2 . Record the best value  a∗1  and  a∗2 .\n",
+    "Fix  a1=a∗1 , and search  a2  for the best value, call the result the new  a∗2 .\n",
+    "Fix  a2=a∗2 , and search  a1  for the best value.\n",
+    "Report the selected  a1  and  a2 .\n",
+    "Train a model using the selected hyper-parameters, and report the test accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-4e6624e07415>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
