--- a/hw3_linearModelsClassification/hw3.ipynb
+++ b/hw3_linearModelsClassification/hw3.ipynb
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,19 +917,19 @@
     "            error_new = error_function(w_new)\n",
     "            \n",
     "            if (error_new >= error_old):\n",
-    "                print(\"Best w found after {}th iteration\".format(i))\n",
+    "#                 print(\"Best w found after {}th iteration\".format(i))\n",
     "                break\n",
     "            \n",
     "            w_old = w_new\n",
     "            \n",
     "            if (error_old - error_new) < self.tol:\n",
-    "                print(\"Best w found after {}th iteration\".format(i+1))\n",
+    "#                 print(\"Best w found after {}th iteration\".format(i+1))\n",
     "                break\n",
     "            \n",
     "            error_old = error_new\n",
     "            \n",
     "        self.w_best = w_old\n",
-    "        print(\"Finish training.\")\n",
+    "#         print(\"Finish training.\")\n",
     "    \n",
     "    def predict_single(self, x_test):\n",
     "        x_test = x_test.reshape((len(x_test), 1))\n",
@@ -1062,7 +1062,7 @@
    "metadata": {},
    "source": [
     "<br>   \n",
-    "* Case 2:  lambda = 1 for numerical-valued features, lambda = 0.5 for binary-valued features, no regularization for incercept term."
+    "* Case 3:  lambda = 1 for numerical-valued features, lambda = 0.5 for binary-valued features, no regularization for incercept term."
    ]
   },
   {
@@ -1134,22 +1134,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-84-4e6624e07415>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best a1=a2= 1.6681005372000592\n",
+      "best a2= 1.6681005372000592\n",
+      "best a1= 0.01\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def get_lambda_vec(a1, a2, a3=0):\n",
+    "    con = [a1 for i in range(len(continuos_col_name))]\n",
+    "    bin = [a2 for i in range(X_train.shape[1] - len(continuos_col_name))]\n",
+    "    return(con+bin+[a3])\n",
+    "\n",
+    "def accuracy_score(pred, observ):\n",
+    "    correct_num = 0\n",
+    "    for i in range(len(observ)):\n",
+    "        if pred[i] == observ[i]:\n",
+    "            correct_num += 1\n",
+    "    return(correct_num/len(observ))\n",
+    "\n",
+    "X_subtrain, X_tuning, Y_subtrain, Y_tuning = train_test_split(np.array(X_train), np.array(Y_train), test_size=0.1)\n",
+    "a_list = np.logspace(-2, 2, 10) \n",
+    "#[  0.01 ,   0.028,   0.077,   0.215,   0.599,   1.668,   4.642, 12.915,  35.938, 100. ]\n",
+    "\n",
+    "best_accuracy = 0\n",
+    "best_a = None\n",
+    "for a in a_list:\n",
+    "    lambda_vec = get_lambda_vec(a,a)\n",
+    "    logic = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "    logic.fit(np.array(X_subtrain), np.array(Y_subtrain))\n",
+    "    predictions = logic.predict(np.array(X_tuning))\n",
+    "    accuracy = accuracy_score(predictions, np.array(Y_tuning))\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_a = a\n",
+    "\n",
+    "print(\"best a1=a2= {}\".format(best_a))        \n",
+    "        \n",
+    "a1 = best_a\n",
+    "best_accuracy = 0\n",
+    "best_a2 = None\n",
+    "for a in a_list:\n",
+    "    lambda_vec = get_lambda_vec(a1,a)\n",
+    "    logic = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "    logic.fit(np.array(X_subtrain), np.array(Y_subtrain))\n",
+    "    predictions = logic.predict(np.array(X_tuning))\n",
+    "    accuracy = accuracy_score(predictions, np.array(Y_tuning))\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_a2 = a\n",
+    "\n",
+    "print(\"best a2= {}\".format(best_a2))         \n",
+    "        \n",
+    "best_accuracy = 0\n",
+    "best_a1 = None\n",
+    "for a in a_list:\n",
+    "    lambda_vec = get_lambda_vec(a,best_a2)\n",
+    "    logic = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "    logic.fit(np.array(X_subtrain), np.array(Y_subtrain))\n",
+    "    predictions = logic.predict(np.array(X_tuning))\n",
+    "    accuracy = accuracy_score(predictions, np.array(Y_tuning))\n",
+    "    if accuracy > best_accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_a1 = a\n",
+    "\n",
+    "print(\"best a1= {}\".format(best_a1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for case 4: 0.848090335436732\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_vec = get_lambda_vec(best_a1,best_a2)\n",
+    "logic4 = mylogistic_l2(reg_vec = lambda_vec, max_iter = 1000, tol = 0.00001, add_intercept = True)\n",
+    "logic4.fit(np.array(X_train), np.array(Y_train))\n",
+    "predictions = logic4.predict(np.array(X_test))\n",
+    "accuracy = accuracy_score(predictions, np.array(Y_test))\n",
+    "\n",
+    "print(\"Accuracy for case 4: {}\\n\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2.5 (20%) Use sklearn.linear_model.LogisticRegression to train and test the model (including hyper-parameter tuning). Compare the estimated parameters and test accuracy with those from your own models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tuned hpyerparameters :(best parameters)  {'C': 1.0, 'penalty': 'l1'}\n",
+      "accuracy : 0.8474728044574158\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from warnings import simplefilter # import warnings filter\n",
+    "\n",
+    "# ignore all future warnings\n",
+    "simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "grid={\"C\":np.logspace(-3,3,7), \"penalty\":[\"l1\",\"l2\"]}\n",
+    "# grid={\"C\":np.logspace(-2,2,10), \"solver\":[\"newton-cg\"]}\n",
+    "# grid={\"C\":np.logspace(-2,2,10)}\n",
+    "logreg=LogisticRegression()\n",
+    "logreg_cv=GridSearchCV(logreg,grid,cv=10)\n",
+    "logreg_cv.fit(np.array(X_train),np.array(Y_train))\n",
+    "\n",
+    "print(\"tuned hpyerparameters :(best parameters) \",logreg_cv.best_params_)\n",
+    "print(\"accuracy :\",logreg_cv.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for case 5: 0.8482231816672202\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg_official=LogisticRegression(penalty='l1', C=1.0)\n",
+    "logreg_official.fit(np.array(X_train),np.array(Y_train))\n",
+    "accuracy = logreg_official.score(np.array(X_test), np.array(Y_test))\n",
+    "print(\"Accuracy for case 5: {}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using the sklearn model, I get the highest Accuracy 0.84822.   \n",
+    "However, the model is using l1 penalty, not l2 penalty like mylogistic_l2"
+   ]
   }
  ],
  "metadata": {
